# slydifi-kyoto-demo

./: .gitignore  LICENSE  README.md  bib.satyh  kyoto.satyh  slide.saty  slydifi-kyoto-demo.opam
.github/workflows/: deploy.yml
